project-1-multi-tier-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-dec-2025
  namespace: iot-nsp
  labels:
    app: nginx
    env: qa
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    # rollingUpdate:
    #   maxUnavailable: 1  # The maximum number of pods that can be unavailable during the update process.
    #   maxSurge: 1 # The maximum number of pods that can be created above the desired number of pods during the update process.
  selector:
    matchLabels:
      app: nginx
      env: qa
  template:
    metadata:
      name: nginx-pod-dec-2025
      labels:
        app: nginx
        env: qa
    spec:
      serviceAccountName: nginx-service-account
      containers:
      - name: nginx-container-dec-2025
        image: nginx:latest
        ports:
        - containerPort: 80
        #code added for resource limit and request
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1248Mi"
            cpu: "1000m"
            #code end
        volumeMounts:
        #code added for configmap
        - name: nginx-config-volume-dec-2025
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        #code ended
        #code for secret file
        - name: env-secret-volume
          mountPath: /opt/env
          readOnly: true
          #code ended
      volumes:
      #code added for config volume
      - name: nginx-config-volume-dec-2025
        configMap:
          name: configmap
      #code ended
      #code for secret to mount to volume in deployment
      - name: env-secret-volume
        secret:
          secretName: env-secret
