project-1-multi-tier-app/be-services.yml
apiVersion: v1
kind: Service
metadata:
  name: project-app-be
  labels:
    app: project-app-be
    env: production
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: project-app-be
    env: production
