project-1-multi-tier-app/fe-services.yml
apiVersion: v1
kind: Service
metadata:
  name: project-app-fe
  labels:
    app: project-app-fe
    env: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: project-app-fe
    env: production
