project-1-multi-tier-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-dec-2025
  namespace: iot-nsp
  labels:
    app: nginx
    env: qa
spec:
  selector:
    app: nginx
    env: qa
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
