project-1-multi-tier-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-app-fe
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: project-app-be
            port:
              number: 3000
